policy/constraints/cluster-constraints.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sBlockNodePort
metadata:
  name: block-node-port
  annotations:
    argocd.argoproj.io/sync-wave: "4"
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Service"]

---

apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sUniqueIngressHost
metadata:
  name: unique-ingress-host
  annotations:
    argocd.argoproj.io/sync-wave: "4"
spec:
  match:
    kinds:
      - apiGroups: ["extensions", "networking.k8s.io"]
        kinds: ["Ingress"]
